ispCP ω 1.0.5 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-02-28 Jochen Manz
	- RELEASE ispCP ω Omega 1.0.4
	- Languages:
		* Updated all available language files
	- CONFIGS:
		* Updated the BuildDate for every distribution

2010-02-25 Benedikt Heintel
	- CONFIGS:
		* Fixed #2233: FreeBSD GUI Makefile correction

2010-02-25 Laurent Declercq
	- GUI:
		* Fixed: Only minified version of js files should be used
		* Fixed: Script tags not properly closed in head
		* Fixed #2234: Switch to new tooltips system (jquery ispCP tooltips plugin)
		* Moved js functions related to the tooltips in the section of deprecated functions
		* Rebuilded minified version from ispcp_full.js file

2010-02-24 Benedikt Heintel
	- CONFIGS:
		* Fixed #2230: FreeBSD´s Makefile is not up-to-date		
	- DATABASE:
		* Fixed #2229: omega 1.0.4 - Database Schema should be updated
	- DOCS:
		* Fixed #2231: Updated freebsd-packages
		* Fixed #2232: Updated the FreeBSD INSTALL

2010-02-23 Laurent Declercq
	- LANGUAGES:
		* Updated French language files

2010-02-23 Benedikt Heintel
	- DOCS:
		* Fixed #2225: The unzip path in the INSTALL-File difference with the path in the Docu.

2010-02-22 Sascha Bay
	- GUI:
		* Fixed #2220: Admin General information is not valid HTML
		* Fixed #2221: Reseller General information is not valid HTML
		* Fixed #2222: Client General information is not valid HTML
		* Fixed: Login screens are not valid HTML

2010-02-21 Benedikt Heintel
	- GUI:
		* Fixed #2053: Make ispCP ω PHP 5.3 compatible (part I)
			* Changed php.ini files to be PHP 5.3 compatible
			* Changed Net_DNS to be PHP 5.3 compatible
			* Changed Net2FTP to be PHP 5.3 compatible

2010-02-20 Benedikt Heintel
	- CONFIGS:
		* Fixed #2533: There is no log rotation for apache logs
	- GUI:
		* Fixed #2192: Enlarge mail forward textareas

2010-02-20 Franseco Bux
	- GUI:
		* Fixed #400: Terms of Service

2010-02-20 Jochen Manz
	- LANGUAGES:
		* Updates every language .po

2010-02-19 Benedikt Heintel
	- DOCS: