@@ -55,11 +55,13 @@ recursive_set_permissions "$ROOT_DIR/engine" $ROOT_USER $ROOT_GROUP 0700 0700
 # to access its "messenger" subfolder.
 set_permissions "$ROOT_DIR/engine" $ROOT_USER $ROOT_GROUP 0755
 
-# Messenger script is run by user "vmail.
+# Messenger script is run by user "vmail".
 recursive_set_permissions "$ROOT_DIR/engine/messenger" \
 	$MTA_MAILBOX_UID_NAME $MTA_MAILBOX_GID_NAME 0750 0550
 recursive_set_permissions "$LOG_DIR/ispcp-arpl-msgr" \
 	$MTA_MAILBOX_UID_NAME $MTA_MAILBOX_GID_NAME 0750 0640
+
+# TODO: Fixing fcgid permisions set before 1.0.5
 
 echo " done";
 
